Add GET curling events route
