# config/swagger.yaml
@@ -2,25 +2,23 @@ openapi: 3.0.0
 info:
   title: Bonspiel Tracking System API
   version: 0.1.0
-
 servers:
-  - url:
-    description: "Base url"
-
+  - url: 'https://bonspiel-server-devl.herokuapp.com/api/v1'
+    description: Base url
 paths:
   /curlingevent:
     get:
       summary: Returns all curling events
       responses:
-        "200":
+        '200':
           description: A JSON array of curling event objects
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/CurlingEvent"
-  "/curlingevent/{curling_event_id}/teams":
+                  $ref: '#/components/schemas/CurlingEvent'
+  '/curlingevent/{curling_event_id}/teams':
     get:
       summary: Returns all teams by curling_event_id
       parameters:
@@ -32,15 +30,15 @@ paths:
             minimum: 0
           description: The curling event id
       responses:
-        "200":
+        '200':
           description: A JSON array of team objects
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Team"
-  "/curlingevent/{curling_event_id}/games":
+                  $ref: '#/components/schemas/Team'
+  '/curlingevent/{curling_event_id}/games':
     get:
       summary: Returns all games by curling_event_id
       parameters:
@@ -52,17 +50,17 @@ paths:
             minimum: 0
           description: The curling event id
       responses:
-        "200":
+        '200':
           description: A JSON array of game objects sorted by team
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/TeamGame"
+                  $ref: '#/components/schemas/TeamGame'
   /query:
     post:
-      summary: "Queries the database without UPDATE, INSERT, CREATE, or DELETE"
+      summary: 'Queries the database without UPDATE, INSERT, CREATE, or DELETE'
       requestBody:
         required: true
         content:
@@ -70,7 +68,7 @@ paths:
             schema:
               type: string
       responses:
-        "200":
+        '200':
           description: Straight from the database
           content:
             application/json:
@@ -85,6 +83,18 @@ components:
           type: integer
           format: int64
         name:
+          type: string
+        begin_date:
+          type: string
+          format: date-time
+        end_date:
+          type: string
+          format: date-time
+        completed:
+          type: boolean
+        info:
+          type: string
+        event_type:
           type: string
     Team:
       type: object
@@ -108,9 +118,9 @@ components:
       type: object
       properties:
         team:
-          $ref: "#/components/schemas/Team"
+          $ref: '#/components/schemas/Team'
         games:
           type: array
           items:
-            $ref: "#/components/schemas/Game"
+            $ref: '#/components/schemas/Game'
 host: bonspiel-server-devl.herokuapp.com
